Fix cutoff userpage text

--- a/app/javascript/flavours/aether/styles/components/single_column_aether.scss
+++ b/app/javascript/flavours/aether/styles/components/single_column_aether.scss
@@ -267,7 +267,7 @@
 }
 
 .scrollable-list--flex {
-  min-height: 10%;
+  min-height: 150px;
   display: flex;
   align-content: center;
 }
